@@ -1,1 +1,12 @@
 # spark-sandbox
+
+JvmOPT
+
+--add-exports java.base/sun.nio.ch=ALL-UNNAMED 
+--add-opens java.base/java.util=ALL-UNNAMED 
+--add-opens java.base/java.io=ALL-UNNAMED 
+--add-opens java.base/java.nio=ALL-UNNAMED 
+--add-opens java.base/java.lang=ALL-UNNAMED 
+--add-opens java.base/java.lang.invoke=ALL-UNNAMED 
+--add-opens java.base/sun.security.util=ALL-UNNAMED 
+--add-opens java.base/sun.security.action=ALL-UNNAMED 
